--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-       Hello world it is html based portfolio
+       Hello world it is html based portfolio.updated html page
 </body>
 </html>
